# fastop

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.github/: feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: prime_five.py  prime_seven.py  showcase.py  symmetric_surfaces.py  time_pipeline.py
docs/: Makefile  odd-primary-algorithmic-simplification.md  odd-primary-internalization.md  package-api.md  prime-five.md  prime-seven.md  releasing.rst  roadmap.md  sage-cohomology-representatives.md  showcase.md  symmetric-surfaces.md
docs/source/: conf.py  conventions.rst  examples.rst  getting-started.rst  index.rst  input-models.rst  models.rst  notes.rst  operations.rst  overview.rst  quotients.rst  reference.rst  releasing.rst  sage.rst
memos/: README.md  odd-primary-algorithmic-simplification.md  roadmap.md
memos/archive/: odd-primary-algorithmic-simplification.md  odd-primary-internalization.md  prime-five.md  prime-seven.md  sage-cohomology-representatives.md  showcase.md  symmetric-surfaces.md
notebooks/: data_structures_and_cohomology.ipynb  lens_spaces.ipynb  products_quotients_and_symmetric_powers.ipynb  symmetric_products_of_curves.ipynb  symmetric_products_of_surfaces.ipynb
src/fastop/: __init__.py  _cochain_evaluation.py  _f2.py  _group_action.py  _linear_algebra.py  _native.c  _odd_primary_formula.py  _oddp_bridge.py  _precomputed_universal.py  _prime_field.py  _space_data.py  _universal.py  cohomology.py  delta_complex.py  group_action.py  simplicial.py  simplicial_set.py  spaces.py
src/fastop/_odd_primary/: __init__.py  evaluate.py  indices.py  reference.py  universal.py
tests/: __init__.py  _oddp_oracle.py  test_cohomology_ring.py  test_delta_complex.py  test_large_examples.py  test_linear_algebra.py  test_mod2_evaluators.py  test_notebooks.py  test_odd_primary_internals.py  test_oddp_integration.py  test_sage_comparison.py  test_simplicial.py  test_simplicial_set.py
