[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastop"
dynamic = ["version"]
description = "Fast computations of cohomology operations on simplicial data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Anibal M. Medina-Mardones", email = "ammedmar@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["cohomology", "Steenrod operations", "simplicial complexes"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
dev = ["pytest>=8", "build>=1", "twine>=6"]

[project.urls]
Homepage = "https://github.com/ammedmar/fastop"
Issues = "https://github.com/ammedmar/fastop/issues"
Source = "https://github.com/ammedmar/fastop"

[tool.setuptools.dynamic]
version = {attr = "fastop.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
