[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastop"
dynamic = ["version"]
description = "Fast computations of cohomology operations on simplicial data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
  {name = "Anibal M. Medina-Mardones", email = "ammedmar@gmail.com"},
  {name = "Federico Cantero-Morán"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
  "cohomology",
  "Steenrod operations",
  "simplicial complexes",
  "Delta-complexes",
  "simplicial sets",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
docs = ["Sphinx>=7"]
dev = ["pytest>=8", "build>=1", "twine>=6", "Sphinx>=7"]

[project.urls]
Homepage = "https://github.com/ammedmar/fastop"
Issues = "https://github.com/ammedmar/fastop/issues"
Source = "https://github.com/ammedmar/fastop"

[tool.setuptools.dynamic]
version = {attr = "fastop.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not large"]
markers = [
  "large: memory-intensive mathematical regressions run only by explicit request",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32 cp3??t-*"
test-command = "python -c \"from fastop import spaces; assert spaces.lens_space(7, 3).cohomology(p=3).operation_rank(2, 1) == 1\""
